// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAlignment should render correctly 1`] = `
<div
  style={
    Object {
      "height": "1.125rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
      "width": "1.125rem",
    }
  }
>
  test lineHeight 
  1.125rem
   and iconsSize 
  1.125rem
</div>
`;

exports[`withAlignment should render correctly 2`] = `
<div
  style={
    Object {
      "height": "1.5rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
      "width": "1.5rem",
    }
  }
>
  test lineHeight 
  1.125rem
   and iconsSize 
  1.5rem
</div>
`;

exports[`withAlignment should render correctly 3`] = `
<div
  style={
    Object {
      "height": "1.125rem",
      "marginTop": "0.1875rem",
      "verticalAlign": "top",
      "width": "1.125rem",
    }
  }
>
  test lineHeight 
  1.5rem
   and iconsSize 
  1.125rem
</div>
`;

exports[`withAlignment should render correctly 4`] = `
<div
  style={
    Object {
      "height": "1.5rem",
      "marginTop": "0rem",
      "verticalAlign": "top",
      "width": "1.5rem",
    }
  }
>
  test lineHeight 
  1.5rem
   and iconsSize 
  1.5rem
</div>
`;

exports[`withAlignment should render correctly 5`] = `
<div
  style={
    Object {
      "height": "1.125rem",
      "marginTop": "0.375rem",
      "verticalAlign": "top",
      "width": "1.125rem",
    }
  }
>
  test lineHeight 
  1.875rem
   and iconsSize 
  1.125rem
</div>
`;

exports[`withAlignment should render correctly 6`] = `
<div
  style={
    Object {
      "height": "1.5rem",
      "marginTop": "0.1875rem",
      "verticalAlign": "top",
      "width": "1.5rem",
    }
  }
>
  test lineHeight 
  1.875rem
   and iconsSize 
  1.5rem
</div>
`;

exports[`withAlignment should render correctly 7`] = `
<div
  style={
    Object {
      "height": "1.125rem",
      "marginTop": "0.75rem",
      "verticalAlign": "top",
      "width": "1.125rem",
    }
  }
>
  test lineHeight 
  2.625rem
   and iconsSize 
  1.125rem
</div>
`;

exports[`withAlignment should render correctly 8`] = `
<div
  style={
    Object {
      "height": "1.5rem",
      "marginTop": "0.5625rem",
      "verticalAlign": "top",
      "width": "1.5rem",
    }
  }
>
  test lineHeight 
  2.625rem
   and iconsSize 
  1.5rem
</div>
`;

exports[`withAlignment should render correctly 9`] = `
<div
  style={
    Object {
      "height": "1.125rem",
      "marginTop": "1.125rem",
      "verticalAlign": "top",
      "width": "1.125rem",
    }
  }
>
  test lineHeight 
  3.375rem
   and iconsSize 
  1.125rem
</div>
`;

exports[`withAlignment should render correctly 10`] = `
<div
  style={
    Object {
      "height": "1.5rem",
      "marginTop": "0.9375rem",
      "verticalAlign": "top",
      "width": "1.5rem",
    }
  }
>
  test lineHeight 
  3.375rem
   and iconsSize 
  1.5rem
</div>
`;
